# tradequant-engine

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py
app/api/: main.py
app/backtest/: __init__.py  engine.py  metrics.py  panel_summary.py  portfolio.py  position_manager.py  report.py  strategy_engine.py  sweep.py  trade_filters.py
app/brokers/: __init__.py  base.py  exceptions.py
app/cache/: __init__.py  base.py  memory.py
app/cli/: __main__.py
app/core/: __init__.py  config.py  events.py  logging.py
app/data/: __init__.py
app/domain/: __init__.py  backtest.py  candle.py  features.py  historical.py  indicators.py  instrument.py  order.py  signal.py  trade.py  training.py
app/indicators/: __init__.py  atr.py  base.py  bollinger.py  ema.py  engine.py  macd.py  rsi.py  vwap.py
app/ml/: __init__.py
app/paper/: __init__.py  bar_clock.py  engine.py  live_runner.py  market_hours.py  models.py  portfolio_state.py  safety.py  store.py
app/risk/: exposure.py  position_sizer.py  stop_loss.py
app/services/: backtest_service.py  batch_data_service.py  feature_service.py  historical_data_service.py  indicator_service.py  paper_trading_service.py  strategy_backtest_service.py  strategy_selector_service.py  strategy_training_service.py  training_service.py
docs/: ARCHITECTURE.md  BACKTESTING.md  CLI.md  LIVE_TRADING.md  ML_TRAINING.md  NIFTY50_BACKTEST_REPORT.md  PAPER_TRADING.md  STRATEGY_SELECTOR.md  UNIVERSES.md
scripts/: generate_nifty50_backtest_report.py  run_nifty50.sh  run_paper_nifty50.sh
tests/: conftest.py
(+134 files in other folders)
